--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "media player",
   "main": "index.js",
   "scripts": {
-    "start": "parcel **/**/*.html"
+    "start": "parcel src/index.html"
   },
   "repository": {
     "type": "git",
